# make_sycl_device_from_level_zero_device_test

./: .gitmodules  CMakeLists.txt  build.sh  configure.sh  make_device_test.cpp  setenv.sh
